WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250245
Fix crash when getPropertyCSSValue() returns nullptr
https://bugs.webkit.org/show_bug.cgi?id=250245
Summary
Fix crash when getPropertyCSSValue() returns nullptr
Chirag M Shah
Reported
2023-01-06 16:53:02 PST
rdar://103916548
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-01-06 16:53:27 PST
We added code recently which doesn't check the return value for getPropertyCSSValue()
Chirag M Shah
Comment 2
2023-01-06 19:01:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8343
EWS
Comment 3
2023-01-10 13:31:08 PST
Committed
258742@main
(db5cab0a4aaa): <
https://commits.webkit.org/258742@main
> Reviewed commits have been landed. Closing PR #8343 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug