Cherry-pick db5cab0a4aaa. rdar://problem/103916548

Stop returning nullptr for system font keywords on non-font related properties

    https://bugs.webkit.org/show_bug.cgi?id=250245
    rdar://103916548

    Reviewed by Darin Adler and Tim Nguyen.

    The code that is handling font: menu shouldn’t apply to non-font
    properties.

    * LayoutTests/fast/css/css-text-border-menu-expected.txt: Added.
    * LayoutTests/fast/css/css-text-border-menu.html: Added.
    * Source/WebCore/css/StyleProperties.cpp:
    (WebCore::StyleProperties::getPropertyCSSValue const):

    Canonical link: https://commits.webkit.org/258742@main

Canonical link: https://commits.webkit.org/258608.38@safari-7615.1.18-branch